--- a/sample/index.html
+++ b/sample/index.html
@@ -1,5 +1,3 @@
-// Thanks to the study group for helping with this template
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -47,7 +45,7 @@
           <div class="col-4 mt-4">
             <div class="card h-100">
               <div class="card-header">
-                <h3>Jared</h3>
+                <h3>Alice</h3>
                 <h4>
                   <i class="fas fa-mug-hot mr-2"></i> Manager
                 </h4>
@@ -57,8 +55,8 @@
                 <p class="id">ID: 1</p>
                 <p class="email">
                   Email:
-                  <a href="mailto:myeonghun.jeong88@gmail.com"
-                    >jared@fakemail.com</a
+                  <a href="mailto:mmedranomiler@gmail.com"
+                    >Alice@gmail.com</a
                   >
                 </p>
                 <p class="office">Office Number: 1</p>
@@ -69,7 +67,7 @@
           <div class="col-4 mt-4">
             <div class="card h-100">
               <div class="card-header">
-                <h3>Alec</h3>
+                <h3>Bob</h3>
                 <h4>
                   <i class="fas fa-glasses mr-2"></i>
                      Engineer
@@ -80,11 +78,11 @@
                 <p class="id">ID: 2</p>
                 <p class="email">
                   Email:
-                  <a href="mailto:alec@fakemail.com">alec@fakemail.com</a>
+                  <a href="mailto:bob@Gmail.com">alec@fakemail.com</a>
                 </p>
                 <p class="github">
                   Github:
-                  <a href="https://github.com/mjtic/" target="_blank">alec</a>
+                  <a href="https://github.com/medranomiler/" target="_blank">Bob</a>
                 </p>
               </div>
             </div>
@@ -93,7 +91,7 @@
           <div class="col-4 mt-4">
             <div class="card h-100">
               <div class="card-header">
-                <h3>Grace</h3>
+                <h3>Carol</h3>
                 <h4>
                   <i class="fas fa-glasses mr-2"></i>Engineer
                 </h4>
@@ -103,10 +101,10 @@
                 <p class="id">ID: 3</p>
                 <p class="email">
                   Email:
-                  <a href="mailto:grace@fakemail.com">grace@fakemail.com</a>
+                  <a href="mailto:carol@gmail.com">Carol@gmail.com</a>
                 </p>
                 <p class="github">
-                  Github: <a href="https://github.com/mjtic/"></a>gchoi2u
+                  Github: <a href="https://github.com/medranomiler/"></a>Carol
                 </p>
               </div>
             </div>
@@ -115,7 +113,7 @@
           <div class="col-4 mt-4">
             <div class="card h-100">
               <div class="card-header">
-                <h3>Tammer</h3>
+                <h3>Darren</h3>
                 <h4>
                   <i class="fas fa-glasses mr-2"></i>Engineer
                 </h4>
@@ -125,10 +123,10 @@
                 <p class="id">ID: 4</p>
                 <p class="email">
                   Email:
-                  <a href="mailto:tammer@fakemail.com">tammer@fakemail.com</a>
+                  <a href="mailto:darren@gmail.com">darren@gmail.com</a>
                 </p>
                 <p class="github">
-                  Github: <a href="https://github.com/mjtic/"></a>tammerg
+                  Github: <a href="https://github.com/medranomiler"></a>medranomiler
                 </p>
               </div>
             </div>
@@ -136,7 +134,7 @@
           <div class="col-4 mt-4">
             <div class="card h-100">
               <div class="card-header">
-                <h3>John</h3>
+                <h3>Eric</h3>
                 <h4>
                   <i class="fas fa-user-graduate mr-2"></i>Intern
                 </h4>
@@ -146,7 +144,7 @@
                 <p class="id">ID: 5</p>
                 <p class="email">
                   Email:
-                  <a href="mailto:john@fakemail.com">john@fakemail.com</a>
+                  <a href="mailto:eric@gmail.com">eric@gmail.com</a>
                 </p>
                 <p class="school">School: 2University</p>
               </div>
